# LyricsMPRIS-Rust

./: Cargo.toml  LICENSE  README.md
src/: event.rs  lyrics.rs  lyricsdb.rs  main.rs  mpris.rs  pool.rs  state.rs  text_utils.rs  timer.rs  ui.rs  util.rs
src/lyrics/: database.rs  mod.rs  parse.rs  providers.rs  similarity.rs  types.rs
src/lyrics/providers/: lrclib.rs  mod.rs  musixmatch.rs
src/mpris/: connection.rs  events.rs  metadata.rs  mod.rs  playback.rs
src/ui/: mod.rs  modern.rs  modern_helpers.rs  pipe.rs  progression.rs  styles.rs  util.rs
