[package]
name = "lyricsmpris"
version = "1.0.0"
edition = "2024"

[dependencies]
dbus = { version = "0.9.7", features = ["futures"] }
reqwest = { version = "0.12.20", features = ["json"] }
tokio = { version = "1.45.1", features = ["full"] }
crossterm = "0.29.0"
tui = "0.19.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
regex = "1.11.1"
urlencoding = "2.1.3"
clap = { version = "4.5.40", features = ["derive"] }
futures-util = "0.3.31"
dbus-tokio = "0.7.6"
once_cell = "1.21.3"
thiserror = "2.0.12"
textwrap = "0.16.2"
unicode-width = "0.2.1"


