[package]
name = "lyricsmpris"
version = "1.0.0"
edition = "2024"

[dependencies]
dbus = { version = "0.9", features = ["futures"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.45", features = ["full"] }
crossterm = "0.29"
tui = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"
urlencoding = "2.1"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
dbus-tokio = "0.7"
once_cell = "1.21"
thiserror = "2.0"
textwrap = "0.16"
unicode-segmentation = "1.11"